--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tmp/
 *.tmp
 *.bak
 *.swp
+*.swo
 *~.nib
 local.properties
 .classpath
@@ -162,6 +163,9 @@ pip-log.txt
 # Mac crap
 .DS_Store
 
-.sublime-project
-.sublime-workspace
+*.sublime-project
+*.sublime-workspace
 db/*
+run.sh
+*.un
+*~
